refactor: move api paths behind v1 version
